input: touchscreen: add gestures haptic feedback control
echo 'Y|N' > /sys/module/touchpanel_common_driver/parameters/haptic_feedback_disable

Signed-off-by: engstk <eng.stk@sapo.pt>
Signed-off-by: chandu078 <chandudyavanapelli03@gmail.com>

--- a/drivers/input/Kconfig
+++ b/drivers/input/Kconfig
@@ -28,6 +28,10 @@ config HAPTIC_FEEDBACK_DISABLE
 	bool "Export haptic feedback control in sysfs"
 	default n
 
+config HAPTIC_FEEDBACK_DISABLE
+	bool "Export gestures haptic feedback control"
+	default n
+
 config INPUT_LEDS
 	tristate "Export input device LEDs in sysfs"
 	depends on LEDS_CLASS
