--- a/arch/arm64/configs/persephone_defconfig
+++ b/arch/arm64/configs/persephone_defconfig
@@ -1323,7 +1323,7 @@ CONFIG_NET_SCHED=y
 # CONFIG_NET_SCH_CODEL is not set
 CONFIG_NET_SCH_FQ_CODEL=y
 # CONFIG_NET_SCH_CAKE is not set
-# CONFIG_NET_SCH_FQ is not set
+CONFIG_NET_SCH_FQ=y
 # CONFIG_NET_SCH_HHF is not set
 # CONFIG_NET_SCH_PIE is not set
 # CONFIG_NET_SCH_INGRESS is not set
@@ -6033,6 +6033,7 @@ CONFIG_PAGE_OWNER=y
 # CONFIG_PAGE_OWNER_ENABLE_DEFAULT is not set
 CONFIG_DEBUG_FS=y
 # CONFIG_HEADERS_CHECK is not set
+CONFIG_OPTIMIZE_INLINING=y
 # CONFIG_DEBUG_SECTION_MISMATCH is not set
 CONFIG_SECTION_MISMATCH_WARN_ONLY=y
 CONFIG_ARCH_WANT_FRAME_POINTERS=y
