drivers: Import tri-state-key hall ic driver
* This driver controls the Alert Slider

Signed-off-by: Vaisakh Murali <mvaisakh@statixos.com>

--- a/drivers/Kconfig
+++ b/drivers/Kconfig
@@ -234,4 +234,6 @@ source "drivers/gpu/msm/Kconfig"
 source "drivers/energy_model/Kconfig"
 
 source "drivers/vibrator/Kconfig"
+
+source "drivers/tri_state_key/Kconfig"
 endmenu
