--- a/drivers/Kconfig
+++ b/drivers/Kconfig
@@ -236,4 +236,6 @@ source "drivers/energy_model/Kconfig"
 source "drivers/vibrator/Kconfig"
 
 source "drivers/tri_state_key/Kconfig"
+
+source "drivers/oneplus/Kconfig"
 endmenu
