--- a/drivers/Makefile
+++ b/drivers/Makefile
@@ -192,6 +192,7 @@ obj-$(CONFIG_AW8697_HAPTIC)     += vibrator/
 obj-$(CONFIG_UNISYS_VISORBUS)	+= visorbus/
 obj-$(CONFIG_SIOX)		+= siox/
 obj-$(CONFIG_TRI_STATE_KEY)     += tri_state_key/
+obj-y                           += oneplus/
 
 obj-$(CONFIG_GNSS)		+= gnss/
 obj-$(CONFIG_SENSORS_SSC)	+= sensors/
