--- a/drivers/Kconfig
+++ b/drivers/Kconfig
@@ -238,4 +238,6 @@ source "drivers/vibrator/Kconfig"
 source "drivers/tri_state_key/Kconfig"
 
 source "drivers/oneplus/Kconfig"
+
+source "drivers/param_read_write/Kconfig"
 endmenu
