--- a/arch/arm64/configs/persephone_defconfig
+++ b/arch/arm64/configs/persephone_defconfig
@@ -502,7 +502,7 @@ CONFIG_KUSER_HELPERS=y
 #
 CONFIG_SUSPEND=y
 CONFIG_SUSPEND_FREEZER=y
-# CONFIG_SUSPEND_SKIP_SYNC is not set
+CONFIG_SUSPEND_SKIP_SYNC=y
 # CONFIG_HIBERNATION is not set
 CONFIG_PM_SLEEP=y
 CONFIG_PM_SLEEP_SMP=y
@@ -560,10 +560,8 @@ CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 # CONFIG_CPU_FREQ_GOV_USERSPACE is not set
 # CONFIG_CPU_FREQ_GOV_ONDEMAND is not set
 # CONFIG_CPU_FREQ_GOV_CONSERVATIVE is not set
-# CONFIG_CPU_BOOST is not set
+CONFIG_CPU_BOOST=y
 CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
-CONFIG_SCHEDUTIL_UP_RATE_LIMIT=500
-CONFIG_SCHEDUTIL_DOWN_RATE_LIMIT=20000
 CONFIG_CPU_FREQ_GOV_SCHEDHORIZON=y
 CONFIG_CPU_FREQ_DEFAULT_LITTLE_MIN=0
 CONFIG_CPU_FREQ_DEFAULT_BIG_MIN=0
@@ -1003,11 +1001,11 @@ CONFIG_TCP_CONG_CDG=y
 CONFIG_TCP_CONG_BBR=y
 # CONFIG_DEFAULT_CUBIC is not set
 # CONFIG_DEFAULT_VENO is not set
-CONFIG_DEFAULT_WESTWOOD=y
+# CONFIG_DEFAULT_WESTWOOD is not set
 # CONFIG_DEFAULT_CDG is not set
-# CONFIG_DEFAULT_BBR is not set
+CONFIG_DEFAULT_BBR=y
 # CONFIG_DEFAULT_RENO is not set
-CONFIG_DEFAULT_TCP_CONG="westwood"
+CONFIG_DEFAULT_TCP_CONG="bbr"
 # CONFIG_TCP_MD5SIG is not set
 CONFIG_IPV6=y
 CONFIG_IPV6_ROUTER_PREF=y
