--- a/arch/arm64/configs/persephone_defconfig
+++ b/arch/arm64/configs/persephone_defconfig
@@ -33,7 +33,7 @@ CONFIG_SWAP=y
 # CONFIG_POSIX_MQUEUE is not set
 CONFIG_CROSS_MEMORY_ATTACH=y
 # CONFIG_USELIB is not set
-CONFIG_AUDIT=y
+# CONFIG_AUDIT is not set
 CONFIG_HAVE_ARCH_AUDITSYSCALL=y
 CONFIG_AUDITSYSCALL=y
 CONFIG_AUDIT_WATCH=y
@@ -83,7 +83,7 @@ CONFIG_PREEMPT_COUNT=y
 #
 CONFIG_TICK_CPU_ACCOUNTING=y
 # CONFIG_VIRT_CPU_ACCOUNTING_GEN is not set
-CONFIG_IRQ_TIME_ACCOUNTING=y
+# CONFIG_IRQ_TIME_ACCOUNTING is not set
 CONFIG_SCHED_WALT=y
 CONFIG_HAVE_SCHED_AVG_IRQ=y
 # CONFIG_BSD_PROCESS_ACCT is not set
@@ -91,9 +91,6 @@ CONFIG_TASKSTATS=y
 # CONFIG_TASK_DELAY_ACCT is not set
 CONFIG_TASK_XACCT=y
 CONFIG_TASK_IO_ACCOUNTING=y
-CONFIG_PSI=y
-# CONFIG_PSI_DEFAULT_DISABLED is not set
-# CONFIG_PSI_FTRACE is not set
 CONFIG_CPU_ISOLATION=y
 
 #
@@ -114,7 +111,6 @@ CONFIG_RCU_NOCB_CPU=y
 CONFIG_BUILD_BIN2C=y
 CONFIG_IKCONFIG=y
 CONFIG_IKCONFIG_PROC=y
-CONFIG_IKHEADERS=y
 CONFIG_LOG_BUF_SHIFT=17
 # CONFIG_CONSOLE_FLUSH_ON_HOTPLUG is not set
 CONFIG_LOG_CPU_MAX_BUF_SHIFT=17
@@ -136,11 +132,9 @@ CONFIG_ARCH_SUPPORTS_NUMA_BALANCING=y
 CONFIG_ARCH_SUPPORTS_INT128=y
 CONFIG_CGROUPS=y
 CONFIG_PAGE_COUNTER=y
+CONFIG_BLK_CGROUP=y
 CONFIG_MEMCG=y
 CONFIG_MEMCG_SWAP=y
-CONFIG_MEMCG_SWAP_ENABLED=y
-CONFIG_MEMCG_KMEM=y
-CONFIG_BLK_CGROUP=y
 # CONFIG_DEBUG_BLK_CGROUP is not set
 CONFIG_CGROUP_WRITEBACK=y
 CONFIG_CGROUP_SCHED=y
@@ -158,7 +152,7 @@ CONFIG_CGROUP_CPUACCT=y
 CONFIG_CGROUP_BPF=y
 # CONFIG_CGROUP_DEBUG is not set
 CONFIG_SOCK_CGROUP_DATA=y
-CONFIG_SCHED_CORE_CTL=y
+# CONFIG_SCHED_CORE_CTL is not set
 CONFIG_NAMESPACES=y
 # CONFIG_UTS_NS is not set
 # CONFIG_USER_NS is not set
@@ -167,7 +161,6 @@ CONFIG_NET_NS=y
 # CONFIG_CHECKPOINT_RESTORE is not set
 # CONFIG_SCHED_AUTOGROUP is not set
 CONFIG_SCHED_TUNE=y
-CONFIG_DYNAMIC_STUNE_BOOST=y
 CONFIG_STUNE_ASSIST=y
 # CONFIG_SYSFS_DEPRECATED is not set
 # CONFIG_RELAY is not set
@@ -210,7 +203,6 @@ CONFIG_AIO=y
 CONFIG_ADVISE_SYSCALLS=y
 CONFIG_MEMBARRIER=y
 CONFIG_KALLSYMS=y
-CONFIG_KALLSYMS_ALL=y
 CONFIG_KALLSYMS_BASE_RELATIVE=y
 CONFIG_BPF_SYSCALL=y
 CONFIG_BPF_JIT_ALWAYS_ON=y
@@ -228,7 +220,6 @@ CONFIG_HAVE_PERF_EVENTS=y
 CONFIG_PERF_EVENTS=y
 # CONFIG_PERF_USER_SHARE is not set
 # CONFIG_DEBUG_PERF_USE_VMALLOC is not set
-CONFIG_VM_EVENT_COUNTERS=y
 # CONFIG_SLUB_DEBUG is not set
 CONFIG_SLUB_MEMCG_SYSFS_ON=y
 # CONFIG_COMPAT_BRK is not set
@@ -466,7 +457,7 @@ CONFIG_SETEND_EMULATION=y
 #
 CONFIG_ARM64_HW_AFDBM=y
 CONFIG_ARM64_PAN=y
-# CONFIG_ARM64_LSE_ATOMICS is not set
+CONFIG_ARM64_LSE_ATOMICS=y
 # CONFIG_ARM64_VHE is not set
 
 #
@@ -560,7 +551,6 @@ CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 # CONFIG_CPU_FREQ_GOV_USERSPACE is not set
 # CONFIG_CPU_FREQ_GOV_ONDEMAND is not set
 # CONFIG_CPU_FREQ_GOV_CONSERVATIVE is not set
-CONFIG_CPU_BOOST=y
 CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
 CONFIG_CPU_FREQ_GOV_SCHEDHORIZON=y
 CONFIG_CPU_FREQ_DEFAULT_LITTLE_MIN=0
@@ -624,7 +614,7 @@ CONFIG_CRYPTO_POLY1305_NEON=y
 # General architecture-dependent options
 #
 # CONFIG_KPROBES is not set
-# CONFIG_JUMP_LABEL is not set
+CONFIG_JUMP_LABEL=y
 CONFIG_UPROBES=y
 CONFIG_HAVE_EFFICIENT_UNALIGNED_ACCESS=y
 CONFIG_HAVE_KPROBES=y
@@ -759,7 +749,6 @@ CONFIG_BLK_MQ_PCI=y
 #
 # IO Schedulers
 #
-CONFIG_IOSCHED_NOOP=y
 # CONFIG_IOSCHED_DEADLINE is not set
 CONFIG_IOSCHED_MAPLE=y
 CONFIG_IOSCHED_CFQ=y
@@ -774,10 +763,6 @@ CONFIG_DEFAULT_CFQ=y
 # CONFIG_DEFAULT_ZEN is not set
 # CONFIG_DEFAULT_MAPLE is not set
 CONFIG_DEFAULT_IOSCHED="cfq"
-CONFIG_MQ_IOSCHED_DEADLINE=y
-CONFIG_MQ_IOSCHED_KYBER=y
-CONFIG_IOSCHED_BFQ=y
-CONFIG_BFQ_GROUP_IOSCHED=y
 CONFIG_ASN1=y
 CONFIG_ARCH_INLINE_SPIN_TRYLOCK=y
 CONFIG_ARCH_INLINE_SPIN_TRYLOCK_BH=y
@@ -900,7 +885,6 @@ CONFIG_ARCH_SUPPORTS_MEMORY_FAILURE=y
 # CONFIG_FRONTSWAP is not set
 CONFIG_CMA=y
 # CONFIG_CMA_DEBUG is not set
-CONFIG_CMA_DEBUGFS=y
 # CONFIG_CMA_ALLOW_WRITE_DEBUGFS is not set
 CONFIG_CMA_AREAS=7
 # CONFIG_ZPOOL is not set
@@ -1001,11 +985,11 @@ CONFIG_TCP_CONG_CDG=y
 CONFIG_TCP_CONG_BBR=y
 # CONFIG_DEFAULT_CUBIC is not set
 # CONFIG_DEFAULT_VENO is not set
-# CONFIG_DEFAULT_WESTWOOD is not set
+CONFIG_DEFAULT_WESTWOOD=y
 # CONFIG_DEFAULT_CDG is not set
-CONFIG_DEFAULT_BBR=y
+# CONFIG_DEFAULT_BBR is not set
 # CONFIG_DEFAULT_RENO is not set
-CONFIG_DEFAULT_TCP_CONG="bbr"
+CONFIG_DEFAULT_TCP_CONG="westwood"
 # CONFIG_TCP_MD5SIG is not set
 CONFIG_IPV6=y
 CONFIG_IPV6_ROUTER_PREF=y
@@ -1311,35 +1295,9 @@ CONFIG_NET_SCHED=y
 #
 # Queueing/Scheduling
 #
-# CONFIG_NET_SCH_CBQ is not set
-CONFIG_NET_SCH_HTB=y
-# CONFIG_NET_SCH_HFSC is not set
-CONFIG_NET_SCH_PRIO=y
-CONFIG_NET_SCH_MULTIQ=y
-# CONFIG_NET_SCH_RED is not set
-# CONFIG_NET_SCH_SFB is not set
-# CONFIG_NET_SCH_SFQ is not set
-# CONFIG_NET_SCH_TEQL is not set
-# CONFIG_NET_SCH_TBF is not set
-# CONFIG_NET_SCH_CBS is not set
-# CONFIG_NET_SCH_ETF is not set
-# CONFIG_NET_SCH_GRED is not set
-# CONFIG_NET_SCH_DSMARK is not set
-CONFIG_NET_SCH_NETEM=y
-# CONFIG_NET_SCH_DRR is not set
-# CONFIG_NET_SCH_MQPRIO is not set
-# CONFIG_NET_SCH_SKBPRIO is not set
-# CONFIG_NET_SCH_CHOKE is not set
-# CONFIG_NET_SCH_QFQ is not set
-# CONFIG_NET_SCH_CODEL is not set
 CONFIG_NET_SCH_FQ_CODEL=y
-# CONFIG_NET_SCH_CAKE is not set
-CONFIG_NET_SCH_FQ=y
-# CONFIG_NET_SCH_HHF is not set
-# CONFIG_NET_SCH_PIE is not set
-CONFIG_NET_SCH_INGRESS=y
-# CONFIG_NET_SCH_PLUG is not set
-# CONFIG_NET_SCH_DEFAULT is not set
+CONFIG_NET_SCH_DEFAULT=y
+CONFIG_DEFAULT_FQ_CODEL=y
 
 #
 # Classification
@@ -1520,7 +1478,7 @@ CONFIG_EXTRA_FIRMWARE=""
 CONFIG_FW_LOADER_USER_HELPER=y
 CONFIG_FW_LOADER_USER_HELPER_FALLBACK=y
 # CONFIG_FW_CACHE is not set
-CONFIG_ALLOW_DEV_COREDUMP=y
+# CONFIG_ALLOW_DEV_COREDUMP is not set
 # CONFIG_DEBUG_DRIVER is not set
 # CONFIG_DEBUG_DEVRES is not set
 # CONFIG_DEBUG_TEST_DRIVER_REMOVE is not set
@@ -1535,7 +1493,6 @@ CONFIG_REGMAP_SPMI=y
 CONFIG_REGMAP_MMIO=y
 CONFIG_REGMAP_IRQ=y
 CONFIG_REGMAP_WCD_IRQ=y
-CONFIG_REGMAP_ALLOW_WRITE_DEBUGFS=y
 CONFIG_DMA_SHARED_BUFFER=y
 # CONFIG_DMA_FENCE_TRACE is not set
 CONFIG_DMA_CMA=y
@@ -1743,7 +1700,7 @@ CONFIG_BLK_DEV_SD=y
 # CONFIG_BLK_DEV_SR is not set
 CONFIG_CHR_DEV_SG=y
 CONFIG_CHR_DEV_SCH=y
-CONFIG_SCSI_CONSTANTS=y
+# CONFIG_SCSI_CONSTANTS is not set
 CONFIG_SCSI_LOGGING=y
 CONFIG_SCSI_SCAN_ASYNC=y
 
@@ -3566,9 +3523,6 @@ CONFIG_BACKLIGHT_QCOM_SPMI_WLED=y
 # CONFIG_BACKLIGHT_BD6107 is not set
 # CONFIG_BACKLIGHT_ARCXCNN is not set
 CONFIG_HDMI=y
-CONFIG_LOGO=y
-# CONFIG_LOGO_LINUX_MONO is not set
-# CONFIG_LOGO_LINUX_VGA16 is not set
 CONFIG_LOGO_LINUX_CLUT224=y
 CONFIG_KLAPSE=y
 CONFIG_SOUND=y
@@ -4617,7 +4571,6 @@ CONFIG_RMNET_IPA3=y
 CONFIG_RNDIS_IPA=y
 # CONFIG_IPA3_MHI_PROXY is not set
 # CONFIG_IPA3_MHI_PRIME_MANAGER is not set
-CONFIG_IPA_UT=y
 CONFIG_USB_BAM=y
 CONFIG_QCOM_GENI_SE=y
 # CONFIG_IPA3_REGDUMP is not set
@@ -4815,7 +4768,6 @@ CONFIG_QCOM_LLCC=y
 CONFIG_QCOM_LITO_LLCC=y
 CONFIG_QCOM_LAGOON_LLCC=y
 # CONFIG_QCOM_SDM845_LLCC is not set
-CONFIG_QCOM_LLCC_PERFMON=y
 CONFIG_QCOM_MDT_LOADER=y
 # CONFIG_QPNP_PBS is not set
 CONFIG_QCOM_QMI_HELPERS=y
@@ -4849,10 +4801,9 @@ CONFIG_MSM_SUBSYSTEM_RESTART=y
 CONFIG_MSM_PIL=y
 CONFIG_MSM_SYSMON_QMI_COMM=y
 CONFIG_MSM_PIL_SSR_GENERIC=y
-CONFIG_MSM_BOOT_STATS=y
+# CONFIG_MSM_BOOT_STATS is not set
 CONFIG_QCOM_DCC_V2=y
 CONFIG_QCOM_EUD=y
-CONFIG_QCOM_MINIDUMP=y
 # CONFIG_QCOM_DYN_MINIDUMP_STACK is not set
 CONFIG_MINIDUMP_MAX_ENTRIES=200
 # CONFIG_QCOM_APR is not set
@@ -4886,15 +4837,11 @@ CONFIG_MSM_IDLE_STATS_BUCKET_COUNT=10
 CONFIG_MSM_SUSPEND_STATS_FIRST_BUCKET=1000000000
 # CONFIG_QTI_L2_REUSE is not set
 # CONFIG_QCOM_DCC is not set
-CONFIG_QTI_RPM_STATS_LOG=y
-CONFIG_QTI_DDR_STATS_LOG=y
 # CONFIG_MSM_JTAGV8 is not set
 CONFIG_QTEE_SHM_BRIDGE=y
 CONFIG_MEM_SHARE_QMI_SERVICE=y
 # CONFIG_MSM_PERFORMANCE is not set
-CONFIG_QMP_DEBUGFS_CLIENT=y
 CONFIG_QCOM_CDSP_RM=y
-CONFIG_QCOM_QHEE_ENABLE_MEM_PROTECTION=y
 CONFIG_QCOM_CX_IPEAK=y
 CONFIG_QTI_CRYPTO_COMMON=y
 CONFIG_QTI_CRYPTO_TZ=y
@@ -5698,7 +5645,7 @@ CONFIG_HAVE_HARDENED_USERCOPY_ALLOCATOR=y
 CONFIG_HARDENED_USERCOPY=y
 CONFIG_HARDENED_USERCOPY_FALLBACK=y
 CONFIG_HARDENED_USERCOPY_PAGESPAN=y
-CONFIG_FORTIFY_SOURCE=y
+# CONFIG_FORTIFY_SOURCE is not set
 CONFIG_STATIC_USERMODEHELPER=y
 CONFIG_STATIC_USERMODEHELPER_PATH=""
 CONFIG_SECURITY_SELINUX=y
@@ -6037,19 +5984,17 @@ CONFIG_MESSAGE_LOGLEVEL_DEFAULT=4
 #
 # Compile-time checks and compiler options
 #
-CONFIG_DEBUG_INFO=y
 # CONFIG_DEBUG_INFO_REDUCED is not set
 # CONFIG_DEBUG_INFO_SPLIT is not set
 # CONFIG_DEBUG_INFO_DWARF4 is not set
 # CONFIG_GDB_SCRIPTS is not set
 CONFIG_ENABLE_MUST_CHECK=y
-CONFIG_FRAME_WARN=2048
+CONFIG_FRAME_WARN=0
 # CONFIG_STRIP_ASM_SYMS is not set
 # CONFIG_READABLE_ASM is not set
 # CONFIG_UNUSED_SYMBOLS is not set
 CONFIG_PAGE_OWNER=y
 # CONFIG_PAGE_OWNER_ENABLE_DEFAULT is not set
-CONFIG_DEBUG_FS=y
 # CONFIG_HEADERS_CHECK is not set
 # CONFIG_DEBUG_SECTION_MISMATCH is not set
 CONFIG_SECTION_MISMATCH_WARN_ONLY=y
@@ -6107,7 +6052,6 @@ CONFIG_SCHED_DEBUG=y
 CONFIG_SCHED_INFO=y
 # CONFIG_PANIC_ON_SCHED_BUG is not set
 # CONFIG_PANIC_ON_RT_THROTTLING is not set
-CONFIG_SCHEDSTATS=y
 # CONFIG_SCHED_STACK_END_CHECK is not set
 # CONFIG_DEBUG_TIMEKEEPING is not set
 # CONFIG_DEBUG_PREEMPT is not set
@@ -6133,7 +6077,6 @@ CONFIG_STACKTRACE=y
 # CONFIG_DEBUG_KOBJECT is not set
 CONFIG_HAVE_DEBUG_BUGVERBOSE=y
 CONFIG_DEBUG_BUGVERBOSE=y
-CONFIG_DEBUG_LIST=y
 # CONFIG_DEBUG_PI_LIST is not set
 # CONFIG_DEBUG_SG is not set
 # CONFIG_DEBUG_NOTIFIERS is not set
@@ -6238,7 +6181,7 @@ CONFIG_ARCH_HAS_DEVMEM_IS_ALLOWED=y
 # CONFIG_PID_IN_CONTEXTIDR is not set
 # CONFIG_ARM64_RANDOMIZE_TEXT_OFFSET is not set
 # CONFIG_DEBUG_WX is not set
-CONFIG_DEBUG_ALIGN_RODATA=y
+# CONFIG_DEBUG_ALIGN_RODATA is not set
 # CONFIG_ARM64_RELOC_TEST is not set
 CONFIG_ARM64_STRICT_BREAK_BEFORE_MAKE=y
 CONFIG_CORESIGHT=y
