configs: switch to LMK
Signed-off-by: Prashant1873 <shuklaprashant847@gmail.com>

--- a/arch/arm64/configs/persephone_defconfig
+++ b/arch/arm64/configs/persephone_defconfig
@@ -20,7 +20,7 @@ CONFIG_THREAD_INFO_IN_TASK=y
 #
 CONFIG_INIT_ENV_ARG_LIMIT=32
 # CONFIG_COMPILE_TEST is not set
-CONFIG_LOCALVERSION="-SuperfastPersephoneKernel-V2"
+CONFIG_LOCALVERSION="-SuperfastPersephoneKernel-V3"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_BUILD_SALT=""
 CONFIG_HAVE_KERNEL_GZIP=y
@@ -130,10 +130,6 @@ CONFIG_ARCH_SUPPORTS_NUMA_BALANCING=y
 CONFIG_ARCH_SUPPORTS_INT128=y
 CONFIG_CGROUPS=y
 CONFIG_PAGE_COUNTER=y
-CONFIG_MEMCG=y
-CONFIG_MEMCG_SWAP=y
-CONFIG_MEMCG_SWAP_ENABLED=y
-CONFIG_MEMCG_KMEM=y
 CONFIG_BLK_CGROUP=y
 # CONFIG_DEBUG_BLK_CGROUP is not set
 CONFIG_CGROUP_WRITEBACK=y
@@ -414,10 +410,10 @@ CONFIG_ARCH_ENABLE_MEMORY_HOTREMOVE=y
 CONFIG_ARCH_NR_GPIO=1280
 # CONFIG_NUMA is not set
 CONFIG_HOLES_IN_ZONE=y
-# CONFIG_HZ_500 is not set
+CONFIG_HZ_100=y
 # CONFIG_HZ_250 is not set
 # CONFIG_HZ_300 is not set
-CONFIG_HZ_100=y
+# CONFIG_HZ_500 is not set
 # CONFIG_HZ_1000 is not set
 CONFIG_HZ=100
 CONFIG_SCHED_HRTICK=y
@@ -5366,6 +5362,7 @@ CONFIG_NVMEM=y
 # CONFIG_NVMEM_SYSFS is not set
 CONFIG_QCOM_QFPROM=y
 CONFIG_NVMEM_SPMI_SDAM=y
+CONFIG_ANDROID_SIMPLE_LMK=y
 
 #
 # HW tracing support
@@ -5407,6 +5404,7 @@ CONFIG_TPD=y
 # CONFIG_TPP is not set
 CONFIG_MEMEX_STANDALONE=y
 CONFIG_RATP=y
+# CONFIG_ZWB_HANDLE is not set
 CONFIG_CPUFREQ_BOUNCING=y
 CONFIG_OPLUS_FEATURE_SUGOV_TL=y
 CONFIG_TOUCHPANEL_ONEPLUS=y
