--- a/arch/arm64/configs/persephone_defconfig
+++ b/arch/arm64/configs/persephone_defconfig
@@ -4,13 +4,12 @@
 #
 
 #
-# Compiler: Android (7820050, based on r433403b) clang version 13.0.3 (https://android.googlesource.com/toolchain/llvm-project d3e1bef2bc2bdec355d4fd0163aeb0aabbe4b66c)
+# Compiler: Azure clang version 15.0.0 (https://github.com/llvm/llvm-project e8b303716e76b6ce75673f9e0de3227e5ce3b87f)
 #
 CONFIG_GCC_VERSION=0
 CONFIG_CC_IS_CLANG=y
 CONFIG_LD_IS_LLD=y
-CONFIG_CLANG_VERSION=130003
-CONFIG_CC_HAS_ASM_GOTO=y
+CONFIG_CLANG_VERSION=150000
 CONFIG_IRQ_WORK=y
 CONFIG_BUILDTIME_EXTABLE_SORT=y
 CONFIG_THREAD_INFO_IN_TASK=y
@@ -20,7 +19,7 @@ CONFIG_THREAD_INFO_IN_TASK=y
 #
 CONFIG_INIT_ENV_ARG_LIMIT=32
 # CONFIG_COMPILE_TEST is not set
-CONFIG_LOCALVERSION="-SuperfastPersephoneKernel-V3forOOS"
+CONFIG_LOCALVERSION="-SuperfastPersephoneKernel-V4forOOS"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_BUILD_SALT=""
 CONFIG_HAVE_KERNEL_GZIP=y
@@ -87,7 +86,7 @@ CONFIG_TASKSTATS=y
 # CONFIG_TASK_DELAY_ACCT is not set
 CONFIG_TASK_XACCT=y
 CONFIG_TASK_IO_ACCOUNTING=y
-# CONFIG_PSI is not set
+CONFIG_PSI=y
 CONFIG_CPU_ISOLATION=y
 
 #
@@ -129,10 +128,9 @@ CONFIG_PELT_UTIL_HALFLIFE_16=y
 CONFIG_ARCH_SUPPORTS_NUMA_BALANCING=y
 CONFIG_ARCH_SUPPORTS_INT128=y
 CONFIG_CGROUPS=y
-CONFIG_PAGE_COUNTER=y
+CONFIG_MEMCG=y
 CONFIG_BLK_CGROUP=y
 # CONFIG_DEBUG_BLK_CGROUP is not set
-CONFIG_CGROUP_WRITEBACK=y
 CONFIG_CGROUP_SCHED=y
 CONFIG_FAIR_GROUP_SCHED=y
 # CONFIG_CFS_BANDWIDTH is not set
@@ -220,7 +218,6 @@ CONFIG_PERF_EVENTS=y
 # CONFIG_DEBUG_PERF_USE_VMALLOC is not set
 CONFIG_VM_EVENT_COUNTERS=y
 # CONFIG_SLUB_DEBUG is not set
-CONFIG_SLUB_MEMCG_SYSFS_ON=y
 # CONFIG_COMPAT_BRK is not set
 # CONFIG_SLAB is not set
 CONFIG_SLUB=y
@@ -484,6 +481,7 @@ CONFIG_CMDLINE_EXTEND=y
 CONFIG_BUILD_ARM64_UNCOMPRESSED_KERNEL=y
 # CONFIG_KRYO_PMU_WORKAROUND is not set
 CONFIG_BUILD_ARM64_DT_OVERLAY=y
+CONFIG_BUILD_ARM64_EMBEDDED_DTB=y
 CONFIG_COMPAT=y
 CONFIG_KUSER_HELPERS=y
 
@@ -538,13 +536,13 @@ CONFIG_CPU_FREQ=y
 CONFIG_CPU_FREQ_GOV_ATTR_SET=y
 CONFIG_CPU_FREQ_STAT=y
 CONFIG_CPU_FREQ_TIMES=y
-CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE=y
+# CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_POWERSAVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_USERSPACE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_CONSERVATIVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_SCHEDUTIL is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_SCHEDHORIZON is not set
+CONFIG_CPU_FREQ_DEFAULT_GOV_SCHEDHORIZON=y
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 # CONFIG_CPU_FREQ_GOV_POWERSAVE is not set
 # CONFIG_CPU_FREQ_GOV_USERSPACE is not set
@@ -616,8 +614,6 @@ CONFIG_CRYPTO_POLY1305_NEON=y
 # General architecture-dependent options
 #
 # CONFIG_KPROBES is not set
-CONFIG_JUMP_LABEL=y
-# CONFIG_STATIC_KEYS_SELFTEST is not set
 CONFIG_UPROBES=y
 CONFIG_HAVE_EFFICIENT_UNALIGNED_ACCESS=y
 CONFIG_HAVE_KPROBES=y
@@ -1329,6 +1325,7 @@ CONFIG_NET_SCH_FQ=y
 # CONFIG_NET_SCH_INGRESS is not set
 # CONFIG_NET_SCH_PLUG is not set
 CONFIG_NET_SCH_DEFAULT=y
+# CONFIG_DEFAULT_FQ is not set
 CONFIG_DEFAULT_FQ_CODEL=y
 # CONFIG_DEFAULT_PFIFO_FAST is not set
 CONFIG_DEFAULT_NET_SCH="fq_codel"
@@ -5362,7 +5359,6 @@ CONFIG_NVMEM=y
 # CONFIG_NVMEM_SYSFS is not set
 CONFIG_QCOM_QFPROM=y
 CONFIG_NVMEM_SPMI_SDAM=y
-CONFIG_ANDROID_SIMPLE_LMK=y
 
 #
 # HW tracing support
