--- a/arch/arm64/configs/persephone_defconfig
+++ b/arch/arm64/configs/persephone_defconfig
@@ -9,6 +9,8 @@
 CONFIG_GCC_VERSION=0
 CONFIG_CC_IS_CLANG=y
 CONFIG_LD_IS_LLD=y
+CONFIG_TOOLS_SUPPORT_RELR=y
+CONFIG_RELR=y
 CONFIG_CLANG_VERSION=150000
 CONFIG_IRQ_WORK=y
 CONFIG_BUILDTIME_EXTABLE_SORT=y
@@ -19,7 +21,7 @@ CONFIG_THREAD_INFO_IN_TASK=y
 #
 CONFIG_INIT_ENV_ARG_LIMIT=32
 # CONFIG_COMPILE_TEST is not set
-CONFIG_LOCALVERSION="-SuperfastPersephoneKernel-V4forOOS"
+CONFIG_LOCALVERSION="-SuperfastPersephoneKernel-V5forOOS"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_BUILD_SALT=""
 CONFIG_HAVE_KERNEL_GZIP=y
@@ -80,8 +82,10 @@ CONFIG_PREEMPT_COUNT=y
 CONFIG_TICK_CPU_ACCOUNTING=y
 # CONFIG_VIRT_CPU_ACCOUNTING_GEN is not set
 # CONFIG_IRQ_TIME_ACCOUNTING is not set
-CONFIG_SCHED_WALT=y
 # CONFIG_BSD_PROCESS_ACCT is not set
+CONFIG_SCHED_WALT=y
+CONFIG_SCHED_CORE_CTL=y
+CONFIG_CGROUP_FREEZER=y
 CONFIG_TASKSTATS=y
 # CONFIG_TASK_DELAY_ACCT is not set
 CONFIG_TASK_XACCT=y
@@ -123,7 +127,7 @@ CONFIG_GENERIC_SCHED_CLOCK=y
 # FAIR Scheuler tunables
 #
 # CONFIG_PELT_UTIL_HALFLIFE_32 is not set
-CONFIG_PELT_UTIL_HALFLIFE_16=y
+# CONFIG_PELT_UTIL_HALFLIFE_16 is not set
 # CONFIG_PELT_UTIL_HALFLIFE_8 is not set
 CONFIG_ARCH_SUPPORTS_NUMA_BALANCING=y
 CONFIG_ARCH_SUPPORTS_INT128=y
@@ -137,7 +141,6 @@ CONFIG_FAIR_GROUP_SCHED=y
 # CONFIG_RT_GROUP_SCHED is not set
 # CONFIG_CGROUP_PIDS is not set
 # CONFIG_CGROUP_RDMA is not set
-CONFIG_CGROUP_FREEZER=y
 CONFIG_CPUSETS=y
 CONFIG_PROC_PID_CPUSET=y
 # CONFIG_CGROUP_DEVICE is not set
@@ -146,7 +149,6 @@ CONFIG_CGROUP_CPUACCT=y
 CONFIG_CGROUP_BPF=y
 # CONFIG_CGROUP_DEBUG is not set
 CONFIG_SOCK_CGROUP_DATA=y
-CONFIG_SCHED_CORE_CTL=y
 CONFIG_NAMESPACES=y
 # CONFIG_UTS_NS is not set
 # CONFIG_USER_NS is not set
@@ -199,6 +201,8 @@ CONFIG_ADVISE_SYSCALLS=y
 CONFIG_MEMBARRIER=y
 CONFIG_KALLSYMS=y
 # CONFIG_KALLSYMS_ALL is not set
+CONFIG_HAVE_LD_DEAD_CODE_DATA_ELIMINATION=y
+CONFIG_LD_DEAD_CODE_DATA_ELIMINATION=y
 CONFIG_KALLSYMS_BASE_RELATIVE=y
 CONFIG_BPF_SYSCALL=y
 CONFIG_BPF_JIT_ALWAYS_ON=y
@@ -476,7 +480,7 @@ CONFIG_CMDLINE="cgroup_disable=pressure"
 CONFIG_CMDLINE_EXTEND=y
 # CONFIG_CMDLINE_FORCE is not set
 # CONFIG_EFI is not set
-# CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE is not set
+CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE=y
 # CONFIG_BUILD_ARM64_KERNEL_COMPRESSION_GZIP is not set
 CONFIG_BUILD_ARM64_UNCOMPRESSED_KERNEL=y
 # CONFIG_KRYO_PMU_WORKAROUND is not set
@@ -1585,9 +1589,10 @@ CONFIG_BLK_DEV=y
 CONFIG_ZRAM=y
 CONFIG_ZRAM_DEDUP=y
 CONFIG_ZRAM_WRITEBACK=y
+CONFIG_ZRAM_LRU_WRITEBACK=y
 # CONFIG_ZRAM_MEMORY_TRACKING is not set
 CONFIG_ZRAM_DEFAULT_COMP_ALGORITHM="lz4"
-CONFIG_ZRAM_SIZE_OVERRIDE=3
+CONFIG_ZRAM_SIZE_OVERRIDE=2
 # CONFIG_BLK_DEV_DAC960 is not set
 # CONFIG_BLK_DEV_UMEM is not set
 CONFIG_BLK_DEV_LOOP=y
@@ -3880,14 +3885,15 @@ CONFIG_PANTHERLORD_FF=y
 # CONFIG_HID_PETALYNX is not set
 # CONFIG_HID_PICOLCD is not set
 CONFIG_HID_PLANTRONICS=y
-# CONFIG_HID_PLAYSTATION is not set
+CONFIG_HID_PLAYSTATION=y
+CONFIG_PLAYSTATION_FF=y
 # CONFIG_HID_PRIMAX is not set
 # CONFIG_HID_RETRODE is not set
 # CONFIG_HID_ROCCAT is not set
 # CONFIG_HID_SAITEK is not set
 # CONFIG_HID_SAMSUNG is not set
 CONFIG_HID_SONY=y
-# CONFIG_SONY_FF is not set
+CONFIG_SONY_FF=y
 # CONFIG_HID_SPEEDLINK is not set
 CONFIG_HID_STEAM=y
 # CONFIG_HID_STEELSERIES is not set
@@ -4290,14 +4296,11 @@ CONFIG_LEDS_TRIGGER_TIMER=y
 # CONFIG_ACCESSIBILITY is not set
 # CONFIG_INFINIBAND is not set
 CONFIG_EDAC_SUPPORT=y
-CONFIG_EDAC=y
 CONFIG_EDAC_LEGACY_SYSFS=y
 # CONFIG_EDAC_DEBUG is not set
 # CONFIG_EDAC_THUNDERX is not set
-CONFIG_EDAC_KRYO_ARM64=y
 # CONFIG_EDAC_KRYO_ARM64_POLL is not set
 # CONFIG_EDAC_KRYO_ARM64_PANIC_ON_CE is not set
-CONFIG_EDAC_KRYO_ARM64_PANIC_ON_UE=y
 # CONFIG_EDAC_XGENE is not set
 # CONFIG_EDAC_CORTEX_ARM64 is not set
 # CONFIG_EDAC_QCOM is not set
@@ -5343,7 +5346,7 @@ CONFIG_ARM_PMU=y
 # CONFIG_QCOM_L2_COUNTERS is not set
 CONFIG_QCOM_LLCC_PMU=y
 # CONFIG_ARM_SPE_PMU is not set
-CONFIG_RAS=y
+# CONFIG_RAS is not set
 
 #
 # Android
@@ -5390,7 +5393,7 @@ CONFIG_DEFRAG=y
 CONFIG_FSC=y
 CONFIG_HOUSTON=y
 CONFIG_CONTROL_CENTER=y
-# CONFIG_AIGOV is not set
+CONFIG_AIGOV=y
 CONFIG_IM=y
 CONFIG_PCCORE=y
 CONFIG_VM_FRAGMENT_MONITOR=y
@@ -5400,7 +5403,7 @@ CONFIG_TPD=y
 # CONFIG_TPP is not set
 CONFIG_MEMEX_STANDALONE=y
 CONFIG_RATP=y
-# CONFIG_ZWB_HANDLE is not set
+CONFIG_ZWB_HANDLE=y
 CONFIG_CPUFREQ_BOUNCING=y
 CONFIG_OPLUS_FEATURE_SUGOV_TL=y
 CONFIG_TOUCHPANEL_ONEPLUS=y
