--- a/arch/arm64/configs/persephone_defconfig
+++ b/arch/arm64/configs/persephone_defconfig
@@ -481,11 +481,12 @@ CONFIG_CMDLINE_EXTEND=y
 # CONFIG_CMDLINE_FORCE is not set
 # CONFIG_EFI is not set
 CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE=y
+CONFIG_BUILD_ARM64_EMBEDDED_DTB=y
 # CONFIG_BUILD_ARM64_KERNEL_COMPRESSION_GZIP is not set
 CONFIG_BUILD_ARM64_UNCOMPRESSED_KERNEL=y
 # CONFIG_KRYO_PMU_WORKAROUND is not set
 CONFIG_BUILD_ARM64_DT_OVERLAY=y
-CONFIG_BUILD_ARM64_EMBEDDED_DTB=y
+# CONFIG_BUILD_ARM64_EMBEDDED_DTB is not set
 CONFIG_COMPAT=y
 CONFIG_KUSER_HELPERS=y
 
