--- a/arch/arm64/configs/persephone_defconfig
+++ b/arch/arm64/configs/persephone_defconfig
@@ -555,8 +555,8 @@ CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 # CONFIG_CPU_FREQ_GOV_CONSERVATIVE is not set
 # CONFIG_CPU_BOOST is not set
 CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
-CONFIG_SCHEDUTIL_UP_RATE_LIMIT=1000
-CONFIG_SCHEDUTIL_DOWN_RATE_LIMIT=1000
+CONFIG_SCHEDUTIL_UP_RATE_LIMIT=2000
+CONFIG_SCHEDUTIL_DOWN_RATE_LIMIT=2000
 CONFIG_CPU_FREQ_GOV_SCHEDHORIZON=y
 CONFIG_CPU_FREQ_DEFAULT_LITTLE_MIN=0
 CONFIG_CPU_FREQ_DEFAULT_BIG_MIN=0
@@ -1592,7 +1592,7 @@ CONFIG_ZRAM_DEDUP=y
 CONFIG_ZRAM_WRITEBACK=y
 CONFIG_ZRAM_LRU_WRITEBACK=y
 # CONFIG_ZRAM_MEMORY_TRACKING is not set
-CONFIG_ZRAM_DEFAULT_COMP_ALGORITHM="lz4"
+CONFIG_ZRAM_DEFAULT_COMP_ALGORITHM="zstd"
 CONFIG_ZRAM_SIZE_OVERRIDE=2
 # CONFIG_BLK_DEV_DAC960 is not set
 # CONFIG_BLK_DEV_UMEM is not set
