config: enable usb2 fast charge

--- a/arch/arm64/configs/persephone_defconfig
+++ b/arch/arm64/configs/persephone_defconfig
@@ -24,6 +24,7 @@ CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_LOCALVERSION="-SuperfastPersephoneKernel-V5forOOS"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_BUILD_SALT=""
+CONFIG_FORCE_FAST_CHARGE=y
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZ4=y
 CONFIG_KERNEL_GZIP=y
