--- a/arch/arm64/configs/persephone_defconfig
+++ b/arch/arm64/configs/persephone_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 4.19.157 Kernel Configuration
+# Linux/arm64 4.19.420 Kernel Configuration
 #
 
 #
@@ -9,8 +9,6 @@
 CONFIG_GCC_VERSION=0
 CONFIG_CC_IS_CLANG=y
 CONFIG_LD_IS_LLD=y
-CONFIG_TOOLS_SUPPORT_RELR=y
-CONFIG_RELR=y
 CONFIG_CLANG_VERSION=150000
 CONFIG_IRQ_WORK=y
 CONFIG_BUILDTIME_EXTABLE_SORT=y
@@ -21,10 +19,9 @@ CONFIG_THREAD_INFO_IN_TASK=y
 #
 CONFIG_INIT_ENV_ARG_LIMIT=32
 # CONFIG_COMPILE_TEST is not set
-CONFIG_LOCALVERSION="-SuperfastPersephoneKernel-V5forOOS"
+CONFIG_LOCALVERSION="-SuperfastPersephoneKernel-V6forOOS"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_BUILD_SALT=""
-CONFIG_FORCE_FAST_CHARGE=y
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZ4=y
 CONFIG_KERNEL_GZIP=y
@@ -83,15 +80,15 @@ CONFIG_PREEMPT_COUNT=y
 CONFIG_TICK_CPU_ACCOUNTING=y
 # CONFIG_VIRT_CPU_ACCOUNTING_GEN is not set
 # CONFIG_IRQ_TIME_ACCOUNTING is not set
-# CONFIG_BSD_PROCESS_ACCT is not set
 CONFIG_SCHED_WALT=y
-CONFIG_SCHED_CORE_CTL=y
-CONFIG_CGROUP_FREEZER=y
+# CONFIG_BSD_PROCESS_ACCT is not set
 CONFIG_TASKSTATS=y
 # CONFIG_TASK_DELAY_ACCT is not set
 CONFIG_TASK_XACCT=y
 CONFIG_TASK_IO_ACCOUNTING=y
 CONFIG_PSI=y
+# CONFIG_PSI_DEFAULT_DISABLED is not set
+# CONFIG_PSI_FTRACE is not set
 CONFIG_CPU_ISOLATION=y
 
 #
@@ -127,21 +124,26 @@ CONFIG_GENERIC_SCHED_CLOCK=y
 #
 # FAIR Scheuler tunables
 #
-# CONFIG_PELT_UTIL_HALFLIFE_32 is not set
+CONFIG_PELT_UTIL_HALFLIFE_32=y
 # CONFIG_PELT_UTIL_HALFLIFE_16 is not set
 # CONFIG_PELT_UTIL_HALFLIFE_8 is not set
 CONFIG_ARCH_SUPPORTS_NUMA_BALANCING=y
 CONFIG_ARCH_SUPPORTS_INT128=y
 CONFIG_CGROUPS=y
+CONFIG_PAGE_COUNTER=y
 CONFIG_MEMCG=y
+# CONFIG_MEMCG_SWAP is not set
+CONFIG_MEMCG_KMEM=y
 CONFIG_BLK_CGROUP=y
 # CONFIG_DEBUG_BLK_CGROUP is not set
+CONFIG_CGROUP_WRITEBACK=y
 CONFIG_CGROUP_SCHED=y
 CONFIG_FAIR_GROUP_SCHED=y
 # CONFIG_CFS_BANDWIDTH is not set
 # CONFIG_RT_GROUP_SCHED is not set
 # CONFIG_CGROUP_PIDS is not set
 # CONFIG_CGROUP_RDMA is not set
+CONFIG_CGROUP_FREEZER=y
 CONFIG_CPUSETS=y
 CONFIG_PROC_PID_CPUSET=y
 # CONFIG_CGROUP_DEVICE is not set
@@ -150,6 +152,7 @@ CONFIG_CGROUP_CPUACCT=y
 CONFIG_CGROUP_BPF=y
 # CONFIG_CGROUP_DEBUG is not set
 CONFIG_SOCK_CGROUP_DATA=y
+CONFIG_SCHED_CORE_CTL=y
 CONFIG_NAMESPACES=y
 # CONFIG_UTS_NS is not set
 # CONFIG_USER_NS is not set
@@ -202,8 +205,6 @@ CONFIG_ADVISE_SYSCALLS=y
 CONFIG_MEMBARRIER=y
 CONFIG_KALLSYMS=y
 # CONFIG_KALLSYMS_ALL is not set
-CONFIG_HAVE_LD_DEAD_CODE_DATA_ELIMINATION=y
-CONFIG_LD_DEAD_CODE_DATA_ELIMINATION=y
 CONFIG_KALLSYMS_BASE_RELATIVE=y
 CONFIG_BPF_SYSCALL=y
 CONFIG_BPF_JIT_ALWAYS_ON=y
@@ -223,6 +224,7 @@ CONFIG_PERF_EVENTS=y
 # CONFIG_DEBUG_PERF_USE_VMALLOC is not set
 CONFIG_VM_EVENT_COUNTERS=y
 # CONFIG_SLUB_DEBUG is not set
+# CONFIG_SLUB_MEMCG_SYSFS_ON is not set
 # CONFIG_COMPAT_BRK is not set
 # CONFIG_SLAB is not set
 CONFIG_SLUB=y
@@ -482,12 +484,14 @@ CONFIG_CMDLINE_EXTEND=y
 # CONFIG_CMDLINE_FORCE is not set
 # CONFIG_EFI is not set
 CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE=y
-CONFIG_BUILD_ARM64_EMBEDDED_DTB=y
+CONFIG_IMG_GZ_DTB=y
+# CONFIG_IMG_DTB is not set
+CONFIG_BUILD_ARM64_APPENDED_KERNEL_IMAGE_NAME="Image.gz-dtb"
+CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE_NAMES=""
 # CONFIG_BUILD_ARM64_KERNEL_COMPRESSION_GZIP is not set
 CONFIG_BUILD_ARM64_UNCOMPRESSED_KERNEL=y
 # CONFIG_KRYO_PMU_WORKAROUND is not set
 CONFIG_BUILD_ARM64_DT_OVERLAY=y
-# CONFIG_BUILD_ARM64_EMBEDDED_DTB is not set
 CONFIG_COMPAT=y
 CONFIG_KUSER_HELPERS=y
 
@@ -1394,6 +1398,7 @@ CONFIG_DNS_RESOLVER=y
 # CONFIG_NET_SWITCHDEV is not set
 # CONFIG_NET_L3_MASTER_DEV is not set
 CONFIG_QRTR=y
+CONFIG_QRTR_WAKEUP_MS=0
 CONFIG_QRTR_SMD=y
 # CONFIG_QRTR_TUN is not set
 CONFIG_QRTR_MHI=y
@@ -1591,10 +1596,11 @@ CONFIG_BLK_DEV=y
 CONFIG_ZRAM=y
 CONFIG_ZRAM_DEDUP=y
 CONFIG_ZRAM_WRITEBACK=y
-CONFIG_ZRAM_LRU_WRITEBACK=y
 # CONFIG_ZRAM_MEMORY_TRACKING is not set
 CONFIG_ZRAM_DEFAULT_COMP_ALGORITHM="zstd"
 CONFIG_ZRAM_SIZE_OVERRIDE=2
+CONFIG_ZRAM_LRU_WRITEBACK=y
+CONFIG_ZRAM_LRU_WRITEBACK_LIMIT=1024
 # CONFIG_BLK_DEV_DAC960 is not set
 # CONFIG_BLK_DEV_UMEM is not set
 CONFIG_BLK_DEV_LOOP=y
@@ -1652,6 +1658,7 @@ CONFIG_UID_SYS_STATS=y
 # CONFIG_TEST_IRQ_REQUESTER is not set
 # CONFIG_QTI_XR_SMRTVWR_MISC is not set
 # CONFIG_QTI_MAXIM_FAN_CONTROLLER is not set
+CONFIG_FORCE_FAST_CHARGE=y
 # CONFIG_C2PORT is not set
 
 #
@@ -4298,14 +4305,6 @@ CONFIG_LEDS_TRIGGER_TIMER=y
 # CONFIG_ACCESSIBILITY is not set
 # CONFIG_INFINIBAND is not set
 CONFIG_EDAC_SUPPORT=y
-CONFIG_EDAC_LEGACY_SYSFS=y
-# CONFIG_EDAC_DEBUG is not set
-# CONFIG_EDAC_THUNDERX is not set
-# CONFIG_EDAC_KRYO_ARM64_POLL is not set
-# CONFIG_EDAC_KRYO_ARM64_PANIC_ON_CE is not set
-# CONFIG_EDAC_XGENE is not set
-# CONFIG_EDAC_CORTEX_ARM64 is not set
-# CONFIG_EDAC_QCOM is not set
 CONFIG_RTC_LIB=y
 CONFIG_RTC_CLASS=y
 CONFIG_RTC_HCTOSYS=y
